--- a/Dsl/GeneratedCode/DomainModelResx.resx
+++ b/Dsl/GeneratedCode/DomainModelResx.resx
@@ -789,6 +789,14 @@
     <value>Text Transformation</value>
     <comment>Toolbox tooltip text</comment>
   </data>
+  <data name="ImporterToolboxItem" xml:space="preserve">
+    <value>Importer</value>
+    <comment>Toolbox item name</comment>
+  </data>
+  <data name="ImporterToolboxTooltip" xml:space="preserve">
+    <value>Importer</value>
+    <comment>Toolbox tooltip text</comment>
+  </data>
   <data name="UnresolvedToolboxItem" xml:space="preserve">
     <value>ToolboxItem {0} was not found</value>
     <comment>Invalid toolId</comment>
@@ -951,6 +959,10 @@ A DomainClass can be serialized as a moniker only if
     <comment>Toolbox item image</comment>
   </data>
   <data name="TextTransformationToolboxBitmap" type="System.Resources.ResXFileRef, System.Windows.Forms" xml:space="preserve">
+    <value>..\Resources\ExampleShapeToolBitmap.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>Toolbox item image</comment>
+  </data>
+  <data name="ImporterToolboxBitmap" type="System.Resources.ResXFileRef, System.Windows.Forms" xml:space="preserve">
     <value>..\Resources\ExampleShapeToolBitmap.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     <comment>Toolbox item image</comment>
   </data>
